syntax = "proto3";

package librarian;

option go_package = "../pb";

service Librarian {
  rpc GetBooks(Author) returns (stream Book) {}
  rpc GetAuthor(Book) returns (Author) {} //some books have few authors
}

message Author {
  string FirstName = 1;
  string LastName = 2;
}

message Book {
  string Name = 1;
  optional bytes Text = 2;      //sometimes we want just know book's authors by its name
  optional string Encoding = 3; //default -- no encoding, plain text
}